tests/mypy/mypy_function_wrapper_fn_t4.out
tests/mypy/mypy_function_wrapper_fn_t4.py:26: error: Need type annotation for "wrapped_function"  [var-annotated]
tests/mypy/mypy_function_wrapper_fn_t4.py:26: error: Argument 1 to "__call__" of "FunctionDecorator" has incompatible type "str"; expected "Callable[[VarArg(Never), KwArg(Never)], Never]"  [arg-type]
tests/mypy/mypy_function_wrapper_fn_t4.py:27: error: Argument 1 to "__call__" of "FunctionDecorator" has incompatible type "None"; expected "Callable[[VarArg(Never), KwArg(Never)], Any]"  [arg-type]
Found 3 errors in 1 file (checked 1 source file)
